--- a/src/_client/postcss/shared/_variables.postcss
+++ b/src/_client/postcss/shared/_variables.postcss
@@ -109,6 +109,8 @@ $max: 1000px;
 $header-height: 60px;
 $header-height-noauth: 120px;
 
+$footer-height: 60px;
+
 $z-back: 0;
 $z-middle: 500;
 $z-front: 1000;
