Updates based on comments
Made the updates from the pull request comments.

--- a/src/_client/postcss/shared/_variables.postcss
+++ b/src/_client/postcss/shared/_variables.postcss
@@ -106,10 +106,10 @@ $github-alt: #4f4f4f;
 
 $max: 1000px;
 
-$header-height: 60px;
-$header-height-noauth: 120px;
+$header-height: 6rem;
+$header-height-noauth: 12rem;
 
-$footer-height: 60px;
+$footer-height: 6rem;
 
 $z-back: 0;
 $z-middle: 500;
