A bunch of fixes

--- a/src/client/postcss/global.postcss
+++ b/src/client/postcss/global.postcss
@@ -1,6 +1,4 @@
-@import 'shared/variables';
-// @import 'shared/mixins';
-@import 'shared/helpers';
-// TODO: slowly move foundation basics into basics over time
-@import 'main/basics';
-@import 'main/layout';
+@import 'variables';
+@import 'helpers';
+@import 'basics';
+@import 'layout';
