--- a/src/client/postcss/_variables.postcss
+++ b/src/client/postcss/_variables.postcss
@@ -18,7 +18,6 @@ $heavy: 800;
 
 $white: white;
 $black: #1e3d43;
-$bg2: #f4f1d5;
 
 $gray-dark: #3b5054;
 $gray-1: #4e5e61;
@@ -85,7 +84,8 @@ $green-l4: #dcebd6;
 $green-l5: #ebf4e8;
 $green-light: #f4f9f2;
 
-$links: #8c02b3;
+$bg2: $yellow-l4;
+$links: $red-d1;
 
 $alert: #f3337b;
 $alert-light: #f36c9f;
