--- a/static/css/global.css
+++ b/static/css/global.css
@@ -35,7 +35,7 @@ article, aside, footer, header, nav, section, figcaption, figure, main, details,
 
 a {
 	background-color: transparent;
-	color: #8c02b3;
+	color: #e53c34;
 	line-height: inherit;
 	text-decoration: none;
 	cursor: pointer;
