--- a/src/client/postcss/global.postcss
+++ b/src/client/postcss/global.postcss
@@ -2,4 +2,4 @@
 @import 'helpers';
 @import 'basics';
 @import 'layout';
-@import '../../../node_modules/quill/dist/quill.snow.css'
+// @import '../../../node_modules/quill/dist/quill.snow.css'
