--- a/src/client/postcss/_layout.postcss
+++ b/src/client/postcss/_layout.postcss
@@ -1,6 +1,6 @@
 html {
 	background-color: $white;
-	font: 62.5%/1.2 $font;
+	font: 1px/1.2 $font; // 1rem === 1px in this scenario
 	box-sizing: border-box;
 	text-size-adjust: 100%;
 	opacity: 1;
@@ -13,5 +13,5 @@ body {
 	margin: 0;
 	background-color: $white;
 	color: $black;
-	font: 1.4rem/1.35 $font;
+	font: 14rem/1.35 $font;
 }
