--- a/static/css/global.css
+++ b/static/css/global.css
@@ -62,35 +62,35 @@ b, strong {
 */
 
 h1, .h1 {
-	margin: 0 0 2rem;
+	margin: 0 0 20rem;
 	color: inherit;
-	font: 2.8rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 28rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h2, .h2 {
-	margin: 0 0 0.6rem;
+	margin: 0 0 6rem;
 	color: inherit;
-	font: 600 2rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 600 20rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h2 + h3, h2 + .h3, .h2 + h3, .h2 + .h3 {
-		margin-top: -0.6rem;
+		margin-top: -6rem;
 	}
 
 h3, .h3 {
-	margin: 0 0 0.6rem;
+	margin: 0 0 6rem;
 	color: inherit;
-	font: 600 1.6rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 600 16rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h3 + h4, h3 + .h4, .h3 + h4, .h3 + .h4 {
-		margin-top: -0.6rem;
+		margin-top: -6rem;
 	}
 
 h4, .h4 {
 	margin: 0;
 	color: #889294;
-	font: 600 1.5rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 600 15rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 h5, .h5 {
@@ -98,7 +98,7 @@ h5, .h5 {
 	color: inherit;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 20px;
-	font-size: 1.8rem;
+	font-size: 18rem;
 	font-weight: 600;
 	line-height: 1.33;
 }
@@ -108,7 +108,7 @@ h6, .h6 {
 	color: inherit;
 	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 17px;
-	font-size: 1.6rem;
+	font-size: 16rem;
 	font-weight: 600;
 	line-height: 1.38;
 }
@@ -118,7 +118,7 @@ p {
 }
 
 ul, ol, dl {
-	margin-bottom: 1rem;
+	margin-bottom: 10rem;
 	list-style-position: outside;
 	line-height: 1.6;
 }
@@ -128,25 +128,25 @@ li {
 }
 
 ul {
-	margin-left: 1.25rem;
+	margin-left: 12.5rem;
 	list-style-type: disc;
 }
 
 ol {
-	margin-left: 1.25rem;
+	margin-left: 12.5rem;
 }
 
 ul ul, ol ul, ul ol, ol ol {
-	margin-left: 1.25rem;
+	margin-left: 12.5rem;
 	margin-bottom: 0;
 }
 
 dl {
-	margin-bottom: 1rem;
+	margin-bottom: 10rem;
 }
 
 dl dt {
-	margin-bottom: 0.3rem;
+	margin-bottom: 3rem;
 	font-weight: bold;
 }
 
@@ -185,9 +185,9 @@ svg:not(:root) {
 hr {
 	clear: both;
 	overflow: visible;
-	max-width: 75rem;
+	max-width: 750rem;
 	height: 0;
-	margin: 1.25rem auto;
+	margin: 12.5rem auto;
 	border-top: 0;
 	border-right: 0;
 	border-bottom: 1px solid #cacaca;
@@ -204,9 +204,9 @@ abbr, abbr[title] {
 pre {
 	overflow: auto;
 	margin: 0;
-	padding: 0.6rem;
+	padding: 6rem;
 	max-height: 400px;
-	font: 1.3rem Consolas, "Liberation Mono", Courier, monospace;
+	font: 13rem Consolas, "Liberation Mono", Courier, monospace;
 	background-color: #f7f9fa;
 	border: 1px solid #e1e5e6;
 }
@@ -214,12 +214,12 @@ pre {
 code {
 	padding: 0;
 	color: #1e3d43;
-	font: 1.3rem Consolas, "Liberation Mono", Courier, monospace;
+	font: 13rem Consolas, "Liberation Mono", Courier, monospace;
 }
 
 kbd {
 	margin: 0;
-	padding: 0.125rem 0.25rem 0;
+	padding: 1.25rem 2.5rem 0;
 	background-color: #e6e6e6;
 	color: #0a0a0a;
 	font-family: Consolas, "Liberation Mono", Courier, monospace;
@@ -306,15 +306,15 @@ input:disabled, textarea:disabled {
 	display: block;
 	box-sizing: border-box;
 	width: 100%;
-	height: 3rem;
-	margin: 0 0 1rem;
-	padding: 0.5rem;
+	height: 30rem;
+	margin: 0 0 10rem;
+	padding: 5rem;
 	border: 1px solid #cbd0d1;
 	border-radius: 2px;
 	background-color: white;
 	box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
 	font-family: inherit;
-	font-size: 1.3rem;
+	font-size: 13rem;
 	font-weight: normal;
 	line-height: 1.5;
 	color: inherit;
@@ -354,14 +354,14 @@ input[type='search'] {
 }
 
 [type='file'], [type='checkbox'], [type='radio'] {
-	margin: 0 0 1rem;
+	margin: 0 0 10rem;
 }
 
 [type='checkbox'] + label, [type='radio'] + label {
 	display: inline-block;
 	vertical-align: baseline;
-	margin-left: 0.5rem;
-	margin-right: 1rem;
+	margin-left: 5rem;
+	margin-right: 10rem;
 	margin-bottom: 0;
 }
 
@@ -379,15 +379,15 @@ label {
 }
 
 label > [type='checkbox'], label > [type='radio'] {
-		margin-right: 0.5rem;
+		margin-right: 5rem;
 	}
 
 select {
 	width: 100%;
-	padding: 0.5rem 1.5rem 0.5rem 0.5rem;
+	padding: 5rem 15rem 5rem 5rem;
 	font: inherit;
 	color: inherit;
-	background: url('/svg/select-handle-off.svg') no-repeat right -1rem center white;
+	background: url('/svg/select-handle-off.svg') no-repeat right -10rem center white;
 	background-origin: content-box;
 	background-size: 8px 11px;
 	border: 1px solid #cbd0d1;
@@ -612,7 +612,7 @@ a, area, button, label, summary, [tabindex] {
 
 html {
 	background-color: white;
-	font: 62.5%/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 1px/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	box-sizing: border-box;
 	text-size-adjust: 100%;
 	opacity: 1;
@@ -627,7 +627,7 @@ body {
 	margin: 0;
 	background-color: white;
 	color: #1e3d43;
-	font: 1.4rem/1.35 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 14rem/1.35 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 /*# sourceMappingURL=global.css.map */
