--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,30 +1,3 @@
-/** >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
- * `.ghost` helper to visually hide elements on the page
- * mostly used for accessibility purposes
-*** >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
-
-.ghost {
-	overflow: hidden;
-	position: absolute !important;
-	width: 1px;
-	height: 1px;
-	clip: rect(1px, 1px, 1px, 1px);
-	clip-path: inset(0 100% 100% 0);
-}
-
-.visibility-hidden {
-	visibility: hidden;
-}
-
-/** >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
- * Helper to group JS for ease of development
- * @helper: .hidden-js
-*** >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
-
-.hidden-js {
-	visibility: hidden;
-}
-
 *, ::before, ::after {
 	box-sizing: inherit;
 }
@@ -608,6 +581,134 @@ a, area, button, label, summary, [tabindex] {
 
 [aria-disabled] {
 	cursor: default;
+}
+
+.buttons {
+	display: grid;
+	grid-gap: 10rem;
+	grid-template-columns: repeat(auto-fill, minmax(150rem, 1fr));
+}
+
+.button {
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 0 10rem;
+	padding: 8rem 16rem;
+	background-color: #a5cd94;
+	border: 1px solid transparent;
+	border-radius: 1px;
+	color: #1e3d43;
+	font: 600 14rem/1 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	text-align: center;
+	transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
+	cursor: pointer;
+	-webkit-appearance: none;
+}
+
+.button:hover, .button:focus {
+		background-color: #8cbf77;
+	}
+
+.button .icon {
+		width: 22px;
+		height: 22px;
+	}
+
+.button .icon-text {
+		margin: 0 0 0 12px;
+		width: 75%;
+		text-align: center;
+	}
+
+.button.tiny {
+		padding: 4rem 8rem;
+		font-size: 9rem;
+		text-transform: uppercase;
+	}
+
+.button.small {
+		padding: 6rem 10rem;
+		font-size: 11rem;
+		text-transform: uppercase;
+	}
+
+.button.large {
+		padding: 10rem 30rem;
+		font-size: 22rem;
+	}
+
+.button.huge {
+		padding: 20rem 50rem;
+		font-size: 34rem;
+	}
+
+.button.success {
+		background-color: #3adb76;
+		color: inherit;
+	}
+
+.button.success:hover, .button.success:focus {
+			background-color: #22bb5b;
+			color: inherit;
+		}
+
+.button.warning {
+		background-color: #f4994e;
+		color: #1e3d43;
+	}
+
+.button.warning:hover, .button.warning:focus {
+			background-color: #e06400;
+			color: white;
+		}
+
+.button.alert {
+		background-color: #f3337b;
+		color: #fefefe;
+	}
+
+.button.alert:hover, .button.alert:focus {
+			background-color: #f36c9f;
+			color: #fefefe;
+		}
+
+.button[disabled] {
+		cursor: not-allowed;
+		background-color: #cbd0d1;
+		color: white;
+	}
+
+.button[disabled]:hover, .button[disabled]:focus {
+			background-color: #cbd0d1;
+			color: white;
+		}
+
+/** >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+ * `.ghost` helper to visually hide elements on the page
+ * mostly used for accessibility purposes
+*** >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+
+.ghost {
+	overflow: hidden;
+	position: absolute !important;
+	width: 1px;
+	height: 1px;
+	clip: rect(1px, 1px, 1px, 1px);
+	clip-path: inset(0 100% 100% 0);
+}
+
+.visibility-hidden {
+	visibility: hidden;
+}
+
+/** >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+ * Helper to group JS for ease of development
+ * @helper: .hidden-js
+*** >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
+
+.hidden-js {
+	visibility: hidden;
 }
 
 html {
