--- a/src/client/postcss/_helpers.postcss
+++ b/src/client/postcss/_helpers.postcss
@@ -78,10 +78,10 @@
 		}
 	}
 	&[disabled] {
-		cursor: not-allowed;
-		// pointer-events: none;
 		background-color: $gray-5;
 		color: white;
+		cursor: default;
+		pointer-events: none;
 		&:hover,
 		&:focus {
 			background-color: $gray-5;
