--- a/src/client/postcss/_basics.postcss
+++ b/src/client/postcss/_basics.postcss
@@ -184,6 +184,38 @@ img {
 	}
 }
 
+table {
+	width: 100%;
+	background-color: $white;
+	border-collapse: collapse;
+	border-spacing: 0;
+	border: 1px solid $gray-6;
+	font: 13rem/1 $font;
+}
+thead,
+tfoot {
+	tr {
+		border: 1px solid $gray-6;
+	}
+}
+tbody {
+	tr {
+		&:nth-child(odd) {
+			background-color: $gray-7;
+		}
+	}
+}
+th,
+td {
+	padding: 8rem;
+	text-align: left;
+	vertical-align: top;
+	line-height: 1;
+}
+th {
+	vertical-align: middle;
+}
+
 svg {
 	vertical-align: middle;
 	fill: currentColor;
