--- a/src/client/postcss/_helpers.postcss
+++ b/src/client/postcss/_helpers.postcss
@@ -74,6 +74,15 @@
 			color: #fefefe;
 		}
 	}
+	&.dull {
+		background-color: $gray-6;
+		color: $black;
+		&:hover,
+		&:focus {
+			background-color: $gray-5;
+			color: $black;
+		}
+	}
 	&.blank {
 		background-color: transparent;
 		color: $links;
