--- a/static/css/global.css
+++ b/static/css/global.css
@@ -694,6 +694,16 @@ a, area, button, label, summary, [tabindex] {
 			color: #fefefe;
 		}
 
+.button.dull {
+		background-color: #e1e5e6;
+		color: #1e3d43;
+	}
+
+.button.dull:hover, .button.dull:focus {
+			background-color: #cbd0d1;
+			color: #1e3d43;
+		}
+
 .button.blank {
 		background-color: transparent;
 		color: #e53c34;
