--- a/src/client/postcss/_layout.postcss
+++ b/src/client/postcss/_layout.postcss
@@ -1,4 +1,5 @@
 html {
+	height: 100%;
 	background-color: $white;
 	font: 1px/1.2 $font; // 1rem === 1px in this scenario
 	box-sizing: border-box;
@@ -10,8 +11,19 @@ html {
 	}
 }
 body {
+	display: flex;
+	min-height: 100%;
 	margin: 0;
 	background-color: $white;
 	color: $black;
 	font: 14rem/1.35 $font;
+}
+.yavascript {
+	overflow: hidden;
+	position: absolute;
+	width: 0;
+	height: 0;
+	top: -1px;
+	left: -1px;
+	pointer-events: none;
 }
