Finishing touches on article update

--- a/src/client/postcss/_helpers.postcss
+++ b/src/client/postcss/_helpers.postcss
@@ -16,7 +16,7 @@
 	justify-content: center;
 	margin: 0 0 10rem;
 	padding: 8rem 16rem;
-	background-color: $teal-d1;
+	background-color: $teal-main;
 	border: 1px solid transparent;
 	border-radius: 1px;
 	color: $white;
