--- a/static/css/global.css
+++ b/static/css/global.css
@@ -628,7 +628,7 @@ a, area, button, label, summary, [tabindex] {
 	justify-content: center;
 	margin: 0 0 10rem;
 	padding: 8rem 16rem;
-	background-color: #5ab2ba;
+	background-color: #77c5cc;
 	border: 1px solid transparent;
 	border-radius: 1px;
 	color: white;
