Article list deletion and filters

--- a/src/client/postcss/_helpers.postcss
+++ b/src/client/postcss/_helpers.postcss
@@ -83,6 +83,15 @@
 			color: $black;
 		}
 	}
+	&.link {
+		padding: 0;
+		border: 0;
+		color: $links;
+		background-color: transparent;
+		&:hover {
+			text-decoration: underline;
+		}
+	}
 	&.blank {
 		background-color: transparent;
 		color: $links;
