--- a/static/css/global.css
+++ b/static/css/global.css
@@ -20,10 +20,6 @@ a:active, a:hover {
 		text-decoration: underline;
 	}
 
-a * {
-		color: #1e3d43;
-	}
-
 b, strong {
 	font-weight: 600;
 	line-height: inherit;
@@ -183,6 +179,11 @@ svg {
 svg:not(:root) {
 		overflow: hidden;
 	}
+
+.svg * {
+	color: currentColor;
+	fill: currentColor;
+}
 
 hr {
 	clear: both;
