--- a/src/client/postcss/_helpers.postcss
+++ b/src/client/postcss/_helpers.postcss
@@ -100,6 +100,18 @@
 			text-decoration: underline;
 		}
 	}
+	&.off {
+		padding: 0;
+		background-color: transparent;
+		color: $black;
+		cursor: default;
+		pointer-events: none;
+		&:hover,
+		&:focus {
+			background-color: transparent;
+			color: $black;
+		}
+	}
 	&[disabled] {
 		background-color: $gray-5;
 		color: white;
