initial global-styles commit
Added ‘global-styles’ route.
Added footer link to this route.
Began adding global CSS styles I needed, but ran into trouble when I
couldn’t get my global.css file to build into the ‘static’ folder in
svelte.

Apologies for making a mess of this!

--- a/src/client/postcss/global.postcss
+++ b/src/client/postcss/global.postcss
@@ -2,4 +2,5 @@
 @import 'basics';
 @import 'helpers';
 @import 'layout';
+@import 'fonts';
 // @import '../../../node_modules/quill/dist/quill.snow.css'
