Cera Pro font fixes

--- a/src/client/postcss/_variables.postcss
+++ b/src/client/postcss/_variables.postcss
@@ -1,15 +1,10 @@
 // https://app.frontify.com/document/84675
 
-// $body-width: 950px;
-// $content-width: 900px;
-
-// $font: 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font: 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $table-font: Verdana, Geneva, monospace;
 $mono-font: Consolas, "Liberation Mono", Courier, monospace;
 // $input-font: Arial, "Helvetica Neue", Helvetica, sans-serif;
 // $input-font: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
-
 
 $light: 200;
 $normal: 400;
