--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,4 +1,4 @@
-@import url("https://fast.fonts.net/lt/1.css?apiType=css&c=6400dd17-fd70-4990-932b-b0eb52f1f77d&fontids=710694");*, ::before, ::after {
+@import url('https://fast.fonts.net/lt/1.css?apiType=css&c=6400dd17-fd70-4990-932b-b0eb52f1f77d&fontids=710694');*, ::before, ::after {
 	box-sizing: inherit;
 }article, aside, footer, header, nav, section, figcaption, figure, main, details, menu {
 	display: block;
@@ -21,27 +21,28 @@
 */h1, .h1 {
 	margin: 0 0 20rem;
 	color: inherit;
-	font: 28rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 40rem/1 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	text-transform: uppercase;
 }h2, .h2 {
 	margin: 0 0 6rem;
 	color: inherit;
-	font: 600 20rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 600 20rem/1.2 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }h2 + h3, h2 + .h3, .h2 + h3, .h2 + .h3 {
 		margin-top: -6rem;
 	}h3, .h3 {
 	margin: 0 0 6rem;
 	color: inherit;
-	font: 600 16rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 600 16rem/1.2 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }h3 + h4, h3 + .h4, .h3 + h4, .h3 + .h4 {
 		margin-top: -6rem;
 	}h4, .h4 {
 	margin: 0;
 	color: #889294;
-	font: 600 15rem/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 600 15rem/1.2 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }h5, .h5 {
 	margin: 0 0 9px;
 	color: inherit;
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 20px;
 	font-size: 18rem;
 	font-weight: 600;
@@ -49,7 +50,7 @@
 }h6, .h6 {
 	margin: 0 0 9px;
 	color: inherit;
-	font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	font-size: 17px;
 	font-size: 16rem;
 	font-weight: 600;
@@ -92,11 +93,11 @@
 		border: 0;
 	}table {
 	width: 100%;
-	background-color: white;
+	background-color: #ffffff;
 	border-collapse: collapse;
 	border-spacing: 0;
 	border: 1px solid #e1e5e6;
-	font: 13rem/1 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 13rem/1 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }thead tr, tfoot tr {
 		border: 1px solid #e1e5e6;
 	}tbody tr:nth-child(odd) {
@@ -138,11 +139,11 @@
 	padding: 6rem;
 	max-height: 400px;
 	font: 13rem Consolas, "Liberation Mono", Courier, monospace;
-	background-color: #f7f9fa;
+	background-color: #f5f5f5;
 	border: 1px solid #e1e5e6;
 }code {
 	padding: 0;
-	color: #1e3d43;
+	color: #000000;
 	font: 13rem Consolas, "Liberation Mono", Courier, monospace;
 }kbd {
 	margin: 0;
@@ -245,7 +246,7 @@
 	padding: 0;
 	height: 18rem;
 	width: 18rem;
-	background: white;
+	background: #ffffff;
 	border: 1rem solid #aeb6b8;
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 	transition: 0.15s border-color ease-in-out;
@@ -253,7 +254,7 @@
 	outline: 0;
 	-webkit-appearance: none;
 }[type="checkbox"]:checked, [type="radio"]:checked {
-		background: url('/svg/checkbox.svg') no-repeat 1px 3px white;
+		background: url('/svg/checkbox.svg') no-repeat 1px 3px #ffffff;
 	}input[type="checkbox"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime-local"]:focus, input[type="datetime"]:focus, input[type="email"]:focus, input[type="month"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="radio"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="time"]:focus, input[type="url"]:focus, input[type="week"]:focus, select:focus, textarea:focus {
 	border-color: #5b9dd9;
 	box-shadow: 0 0 2px rgba(30, 140, 190, 0.8);
@@ -405,7 +406,7 @@
  * inoperable elements (opinionated).
  */[aria-disabled] {
 	cursor: default;
-}.buttons {
+}.red { color: #cc5654; }.green { color: #629275; }.black { color: #000000; }.offwhite { color: #f3f3f2; }.gray { color: #505050; }.buttons {
 	display: flex;
 	align-items: center;
 	margin: 0 -6rem;
@@ -420,8 +421,8 @@
 	background-color: #77c5cc;
 	border: 1px solid transparent;
 	border-radius: 1px;
-	color: white;
-	font: 600 14rem/1 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	color: #ffffff;
+	font: 600 14rem/1 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	text-align: center;
 	transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
 	cursor: pointer;
@@ -443,17 +444,17 @@
 		padding: 20rem 50rem;
 		font-size: 34rem;
 	}.button.success {
-		background-color: #71b256;
-		color: white;
+		background-color: #629275;
+		color: #ffffff;
 	}.button.success:hover, .button.success:focus {
 			background-color: #408424;
-			color: white;
+			color: #ffffff;
 		}.button.warning {
 		background-color: #fbc90d;
-		color: #1e3d43;
+		color: #000000;
 	}.button.warning:hover, .button.warning:focus {
 			background-color: #f4e4a6;
-			color: #1e3d43;
+			color: #000000;
 		}.button.alert {
 		background-color: #f3337b;
 		color: #fefefe;
@@ -462,10 +463,10 @@
 			color: #fefefe;
 		}.button.dull {
 		background-color: #e1e5e6;
-		color: #1e3d43;
+		color: #000000;
 	}.button.dull:hover, .button.dull:focus {
 			background-color: #cbd0d1;
-			color: #1e3d43;
+			color: #000000;
 		}.button.link {
 		padding: 0;
 		border: 0;
@@ -481,12 +482,12 @@
 		}.button.off {
 		padding: 0;
 		background-color: transparent;
-		color: #1e3d43;
+		color: #000000;
 		cursor: default;
 		pointer-events: none;
 	}.button.off:hover, .button.off:focus {
 			background-color: transparent;
-			color: #1e3d43;
+			color: #000000;
 		}.button[disabled] {
 		background-color: #cbd0d1;
 		color: white;
@@ -514,8 +515,8 @@
 	visibility: hidden;
 }html {
 	height: 100%;
-	background-color: white;
-	font: 1px/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	background-color: #ffffff;
+	font: 1px/1.2 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	box-sizing: border-box;
 	text-size-adjust: 100%;
 	opacity: 1;
@@ -526,9 +527,10 @@
 	display: flex;
 	min-height: 100%;
 	margin: 0;
-	background-color: white;
-	color: #1e3d43;
-	font: 14rem/1.35 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	background-color: #ffffff;
+	color: #000000;
+	font: 15rem/1.15 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	letter-spacing: 0.02em;
 }.yavascript {
 	overflow: hidden;
 	position: absolute;
@@ -538,23 +540,33 @@
 	left: -1px;
 	pointer-events: none;
 }@font-face{
-        font-family:"SackersGothicW01-Heavy";
-        src:url("/fonts/710694/88d580f0-fc89-4509-99f3-49d2f3944623.eot?#iefix");
-        src:url("/fonts/710694/88d580f0-fc89-4509-99f3-49d2f3944623.eot?#iefix") format("eot"),url("Fonts/710694/61ce039d-64f5-462d-bada-d8253c271b5c.woff2") format("woff2"),url("Fonts/710694/0e382226-2fd0-4217-b22f-6624a7afc569.woff") format("woff"),url("Fonts/710694/f3ef64db-65a0-40a0-9541-9628d06833dc.ttf") format("truetype");
-}@font-face 
-
-@font-face {
-  font-family: 'cerapro-regular';
-  src: url('/fonts/cp-regular.otf');
+	font-family: 'SackersGothicW01-Heavy';
+	src: url('/fonts/710694/88d580f0-fc89-4509-99f3-49d2f3944623.eot?#iefix');
+	src:
+		url('/fonts/710694/88d580f0-fc89-4509-99f3-49d2f3944623.eot?#iefix') format('eot'),
+		url('Fonts/710694/61ce039d-64f5-462d-bada-d8253c271b5c.woff2') format('woff2'),
+		url('Fonts/710694/0e382226-2fd0-4217-b22f-6624a7afc569.woff') format('woff'),
+		url('Fonts/710694/f3ef64db-65a0-40a0-9541-9628d06833dc.ttf') format('truetype');
 }@font-face {
-  font-family: 'cerapro-bold';
-  src: url('/fonts/cp-bold.otf');
+	font-family: 'Cerapro';
+	src: url('/fonts/cerapro/cp-light-webfont.woff2') format('woff2'),
+		 url('/fonts/cerapro/cp-light-webfont.woff') format('woff');
+	font-weight: 200;
 }@font-face {
-  font-family: 'cerapro-medium';
-  src: url('/fonts/cp-medium.otf');
+	font-family: 'Cerapro';
+	src: url('/fonts/cerapro/cp-regular-webfont.woff2') format('woff2'),
+		 url('/fonts/cerapro/cp-regular-webfont.woff') format('woff');
+	font-weight: 400;
 }@font-face {
-  font-family: 'cerapro-light';
-  src: url('/fonts/cp-light.otf');
+	font-family: 'Cerapro';
+	src: url('/fonts/cerapro/cp-medium-webfont.woff2') format('woff2'),
+		 url('/fonts/cerapro/cp-medium-webfont.woff') format('woff');
+	font-weight: 600;
+}@font-face {
+	font-family: 'Cerapro';
+	src: url('/fonts/cerapro/cp-bold-webfont.woff2') format('woff2'),
+		 url('/fonts/cerapro/cp-bold-webfont.woff') format('woff');
+	font-weight: 800;
 }
 
 /*# sourceMappingURL=global.css.map */
