Header and body style fixes

--- a/src/client/postcss/_helpers.postcss
+++ b/src/client/postcss/_helpers.postcss
@@ -1,3 +1,8 @@
+.red { color: #cc5654; }
+.green { color: #629275; }
+.black { color: #000000; }
+.offwhite { color: #f3f3f2; }
+.gray { color: #505050; }
 
 .buttons {
 	// display: grid;
