--- a/src/client/postcss/_variables.postcss
+++ b/src/client/postcss/_variables.postcss
@@ -11,9 +11,21 @@ $normal: 400;
 $bold: 600;
 $heavy: 800;
 
-$white: white;
-$black: #1e3d43;
+$black: #000000;
+$white: #ffffff;
+$offwhite: #f3f3f2;
 
+$gray-light: #f5f5f5;
+$gray-main: #505050;
+
+$red-main: #cc5654;
+
+$green-main: #629275;
+
+
+
+
+// FIXME:
 $gray-dark: #3b5054;
 $gray-1: #4e5e61;
 $gray-2: #6b787b;
@@ -22,12 +34,10 @@ $gray-4: #aeb6b8;
 $gray-5: #cbd0d1;
 $gray-6: #e1e5e6;
 $gray-7: #f0f4f5;
-$gray-light: #f7f9fa;
 
-// FIXME:
 $red-dark: #bd0d05;
 $red-d1: #e53c34;
-$red-main: #ef5750;
+// $red-main: #ef5750;
 $red-l1: #f1726c;
 $red-l2: #ee8b86;
 $red-l3: #eeaba7;
@@ -71,7 +81,7 @@ $orange-light: #fcf8f5;
 $green-dark: #217000;
 $green-d2: #408424;
 $green-d1: #519834;
-$green-main: #71b256;
+// $green-main: #71b256;
 $green-l1: #8cbf77;
 $green-l2: #a5cd94;
 $green-l3: #c0dbb4;
