--- a/src/client/postcss/_basics.postcss
+++ b/src/client/postcss/_basics.postcss
@@ -67,7 +67,9 @@ h1,
 .h1 {
 	margin: 0 0 20rem;
 	color: inherit;
-	font: 28rem/1.2 $font;
+	font: 40rem/1 $font;
+	// letter-spacing: 0.02em;
+	text-transform: uppercase;
 }
 h2,
 .h2 {
@@ -125,7 +127,6 @@ ol,
 dl {
 	margin-bottom: 10rem;
 	list-style-position: outside;
-	line-height: 1.6;
 }
 
 li {
