--- a/src/client/postcss/_layout.postcss
+++ b/src/client/postcss/_layout.postcss
@@ -16,7 +16,8 @@ body {
 	margin: 0;
 	background-color: $white;
 	color: $black;
-	font: 14rem/1.35 $font;
+	font: 15rem/1.15 $font;
+	letter-spacing: 0.02em;
 }
 .yavascript {
 	overflow: hidden;
