Some overall fixes to layout

--- a/src/client/postcss/_basics.postcss
+++ b/src/client/postcss/_basics.postcss
@@ -67,8 +67,8 @@ h1,
 .h1 {
 	margin: 0 0 20rem;
 	color: inherit;
-	font: 40rem/1 $font;
-	// letter-spacing: 0.02em;
+	font: $light 40rem/1 $font;
+	letter-spacing: 0.02em;
 	text-transform: uppercase;
 }
 h2,
