--- a/src/client/postcss/_variables.postcss
+++ b/src/client/postcss/_variables.postcss
@@ -1,5 +1,7 @@
 // https://app.frontify.com/document/84675
 
+$layout-width: 1200rem;
+
 $font: 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $table-font: Verdana, Geneva, monospace;
 $mono-font: Consolas, "Liberation Mono", Courier, monospace;
@@ -22,7 +24,7 @@ $red-main: #cc5654;
 
 $green-main: #629275;
 
-
+$orange-light: #f9f3ea;
 
 
 // FIXME:
@@ -76,7 +78,7 @@ $orange-l3: #f4ac70;
 $orange-l4: #f3be92;
 $orange-l5: #f6d6bb;
 $orange-l6: #f6e7da;
-$orange-light: #fcf8f5;
+// $orange-light: #fcf8f5;
 
 $green-dark: #217000;
 $green-d2: #408424;
@@ -108,13 +110,6 @@ $google: #4285f4;
 $google-alt: #78a9f7;
 $github: #181717;
 $github-alt: #4f4f4f;
-
-$max: 1000px;
-
-$header-height: 60rem;
-$header-height-noauth: 120rem;
-
-$footer-height: 60rem;
 
 $z-back: 0;
 $z-middle: 500;
