Getting the archive ready

--- a/src/client/postcss/_layout.postcss
+++ b/src/client/postcss/_layout.postcss
@@ -27,6 +27,9 @@ body {
 	max-width: $layout-width;
 	margin: 0 auto;
 }
+.layout-main {
+	padding: 100rem 0;
+}
 // https://css-tricks.com/full-width-containers-limited-width-parents/
 // https://codepen.io/tigt/post/bust-elements-out-of-containers-with-one-line-of-css
 .full-width {
