Some responsive work

--- a/src/client/postcss/_layout.postcss
+++ b/src/client/postcss/_layout.postcss
@@ -21,6 +21,7 @@ body {
 }
 .layout-outer {
 	padding: 0 30rem;
+	@media (--small-down) { padding: 0 20rem; }
 }
 .layout-inner {
 	width: 100%;
@@ -29,6 +30,7 @@ body {
 }
 .layout-main {
 	padding: 100rem 0;
+	@media (--small-down) { padding: 40rem 0; }
 }
 // https://css-tricks.com/full-width-containers-limited-width-parents/
 // https://codepen.io/tigt/post/bust-elements-out-of-containers-with-one-line-of-css
