--- a/static/css/global.css
+++ b/static/css/global.css
@@ -60,7 +60,7 @@ h3 + h4, h3 + .h4, .h3 + h4, .h3 + .h4 {
 
 h4, .h4 {
 	margin: 0;
-	color: #949699;
+	color: inherit;
 	font: 600 15rem/1.2 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
