--- a/src/client/postcss/_basics.postcss
+++ b/src/client/postcss/_basics.postcss
@@ -67,7 +67,7 @@ h1,
 .h1 {
 	margin: 0 0 20rem;
 	color: inherit;
-	font: $light 40rem/1 $font;
+	font: $light 40rem/1.3 $font;
 	letter-spacing: 0.02em;
 	text-transform: uppercase;
 }
@@ -109,13 +109,15 @@ h5,
 }
 h6,
 .h6 {
-	margin: 0 0 9px;
+	margin: 0;
 	color: inherit;
 	font-family: $font;
-	font-size: 17px;
-	font-size: 16rem; // scss-lint:disable DuplicateProperty
+	font-size: 12px;
+	font-size: 12rem; // scss-lint:disable DuplicateProperty
 	font-weight: $bold;
-	line-height: lh(16, 22);
+	line-height: lh(12, 12);
+	text-transform: uppercase;
+	letter-spacing: 1.5rem;
 }
 
 p {
