--- a/src/client/postcss/_variables.postcss
+++ b/src/client/postcss/_variables.postcss
@@ -115,6 +115,8 @@ $z-back: 0;
 $z-middle: 500;
 $z-front: 1000;
 
+$z-back-modal: 10000;
+$z-middle-modal: 10000;
 $z-front-modal: 10000;
 
 // see: https://www.sitepoint.com/the-postcss-guide-to-improving-selectors-and-media-queries/
