--- a/src/client/postcss/_layout.postcss
+++ b/src/client/postcss/_layout.postcss
@@ -32,6 +32,15 @@ body {
 	padding: 100rem 0;
 	@media (--small-down) { padding: 40rem 0; }
 }
+// .chapters {}
+// .chapter {}
+.chapter-content {
+	margin: 0 auto;
+	// padding: 0 40rem;
+	width: 100%;
+	max-width: $layout-width;
+	// @media (--small-down) { padding: 0 20rem; }
+}
 // https://css-tricks.com/full-width-containers-limited-width-parents/
 // https://codepen.io/tigt/post/bust-elements-out-of-containers-with-one-line-of-css
 .full-width {
