--- a/src/client/postcss/_layout.postcss
+++ b/src/client/postcss/_layout.postcss
@@ -19,20 +19,38 @@ body {
 	font: 15rem/1.15 $font;
 	letter-spacing: 0.02em;
 }
+// .layout-outer {
+// 	padding: 0 30rem;
+// 	@media (--small-down) { padding: 0 20rem; }
+// }
+// .layout-inner {
+// 	width: 100%;
+// 	max-width: $layout-width;
+// 	margin: 0 auto;
+// }
+// .layout-main {
+// 	padding: 100rem 0;
+// 	@media (--small-down) { padding: 40rem 0; }
+// }
 .layout-outer {
 	padding: 0 30rem;
-	@media (--small-down) { padding: 0 20rem; }
-}
-.layout-inner {
 	width: 100%;
 	max-width: $layout-width;
 	margin: 0 auto;
+	@media (--small-down) { padding: 0 20rem; }
 }
+// .layout-inner {
+// }
 .layout-main {
 	padding: 100rem 0;
 	@media (--small-down) { padding: 40rem 0; }
 }
 // .chapters {}
+// .chapter {}
+.chapters {
+	margin: 0 -30rem;
+	@media (--small-down) { margin: 0 -20rem; }
+}
 // .chapter {}
 .chapter-content {
 	margin: 0 auto;
@@ -43,9 +61,10 @@ body {
 }
 // https://css-tricks.com/full-width-containers-limited-width-parents/
 // https://codepen.io/tigt/post/bust-elements-out-of-containers-with-one-line-of-css
-.full-width {
-	margin: 0 calc(50% - 50vw);
-}
+// .full-width {
+// 	margin: 0 calc(50% - 50vw);
+// }
+// .full-width {}
 .yavascript {
 	overflow: hidden;
 	position: absolute;
