--- a/src/client/postcss/_fonts.postcss
+++ b/src/client/postcss/_fonts.postcss
@@ -34,3 +34,11 @@
 		 url('/fonts/cerapro/cp-bold-webfont.woff') format('woff');
 	font-weight: 800;
 }
+
+@font-face {
+	font-family: 'Sackers';
+	src: url('/fonts/sackers/at-sackers-heavy-gothic.woff2') format('woff2'),
+		 url('/fonts/sackers/at-sackers-heavy-gothic.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
