--- a/src/client/postcss/_variables.postcss
+++ b/src/client/postcss/_variables.postcss
@@ -3,6 +3,7 @@
 $layout-width: 1200rem;
 
 $font: 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$font-2: 'Sackers', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $table-font: Verdana, Geneva, monospace;
 $mono-font: Consolas, "Liberation Mono", Courier, monospace;
 // $input-font: Arial, "Helvetica Neue", Helvetica, sans-serif;
