--- a/static/css/global.css
+++ b/static/css/global.css
@@ -903,4 +903,12 @@ body {
 	font-weight: 800;
 }
 
+@font-face {
+	font-family: 'Sackers';
+	src: url('/fonts/sackers/at-sackers-heavy-gothic.woff2') format('woff2'),
+		 url('/fonts/sackers/at-sackers-heavy-gothic.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
 /*# sourceMappingURL=global.css.map */
