--- a/static/css/global.css
+++ b/static/css/global.css
@@ -654,21 +654,24 @@ a, area, button, label, summary, [tabindex] {
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
+	height: 45rem;
 	margin: 0 0 10rem;
-	padding: 8rem 16rem;
-	background-color: #77c5cc;
-	border: 1px solid transparent;
-	border-radius: 1px;
-	color: #ffffff;
-	font: 600 14rem/1 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	padding: 0 40rem;
+	background-color: transparent;
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	font: 600 15rem/45rem 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	text-transform: uppercase;
 	text-align: center;
+	letter-spacing: 6rem;
+	white-space: nowrap;
 	transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
 	cursor: pointer;
 	-webkit-appearance: none;
 }
 
 .button:hover, .button:focus {
-		background-color: #2c8f99;
+		background-color: #323335;
+		color: white;
 	}
 
 .button.tiny {
@@ -705,12 +708,12 @@ a, area, button, label, summary, [tabindex] {
 
 .button.warning {
 		background-color: #fbc90d;
-		color: #000000;
+		color: #323335;
 	}
 
 .button.warning:hover, .button.warning:focus {
 			background-color: #f4e4a6;
-			color: #000000;
+			color: #323335;
 		}
 
 .button.alert {
@@ -725,12 +728,12 @@ a, area, button, label, summary, [tabindex] {
 
 .button.dull {
 		background-color: #e1e5e6;
-		color: #000000;
+		color: #323335;
 	}
 
 .button.dull:hover, .button.dull:focus {
 			background-color: #cbd0d1;
-			color: #000000;
+			color: #323335;
 		}
 
 .button.link {
@@ -756,26 +759,24 @@ a, area, button, label, summary, [tabindex] {
 .button.off {
 		padding: 0;
 		background-color: transparent;
-		color: #000000;
+		color: #323335;
 		cursor: default;
 		pointer-events: none;
 	}
 
 .button.off:hover, .button.off:focus {
 			background-color: transparent;
-			color: #000000;
+			color: #323335;
 		}
 
 .button[disabled] {
-		background-color: #cbd0d1;
-		color: white;
 		cursor: default;
 		pointer-events: none;
 	}
 
 .button[disabled]:hover, .button[disabled]:focus {
-			background-color: #cbd0d1;
-			color: white;
+			background-color: transparent;
+			color: #323335;
 		}
 
 /** >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
