--- a/static/css/global.css
+++ b/static/css/global.css
@@ -486,6 +486,25 @@ q:before, q:after {
 	content: '';
 }
 
+blockquote {
+	margin: 50rem 0 0;
+	padding: 0 50rem;
+	color: inherit;
+	font: 200 30rem/1.4 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	letter-spacing: 1rem;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+blockquote::after {
+		content: '';
+		display: block;
+		width: 50%;
+		height: 4rem;
+		margin: 20rem auto 50rem;
+		background-color: #cc5654;
+	}
+
 /* Text-level semantics (https://html.spec.whatwg.org/multipage/semantics.html#text-level-semantics)
    ========================================================================== */
 
