--- a/src/client/postcss/_helpers.postcss
+++ b/src/client/postcss/_helpers.postcss
@@ -25,7 +25,7 @@ $button-black: #323335;
 	padding: 0 40rem;
 	background-color: transparent;
 	border: 1px solid rgba(0, 0, 0, 0.3);
-	font: $bold 15rem/45rem $font;
+	font: 14rem/45rem $font;
 	text-transform: uppercase;
 	text-align: center;
 	letter-spacing: 6rem;
