--- a/static/css/global.css
+++ b/static/css/global.css
@@ -678,7 +678,7 @@ a, area, button, label, summary, [tabindex] {
 	padding: 0 40rem;
 	background-color: transparent;
 	border: 1px solid rgba(0, 0, 0, 0.3);
-	font: 600 15rem/45rem 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font: 14rem/45rem 'Cerapro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
 	text-align: center;
 	letter-spacing: 6rem;
