--- a/src/client/postcss/_basics.postcss
+++ b/src/client/postcss/_basics.postcss
@@ -54,6 +54,7 @@ h1,
 	font: $light 28rem/1.25 $font;
 	letter-spacing: 0.02em;
 	text-transform: uppercase;
+	text-align: center;
 }
 h2,
 .h2 {
@@ -425,9 +426,9 @@ input[type='search'] {
 	cursor: pointer;
 	outline: 0;
 	-webkit-appearance: none;
-	&:checked {
-		background: url('/svg/checkbox.svg') no-repeat 1px 3px $white;
-	}
+	// &:checked {
+	// 	background: url('/svg/checkbox.svg') no-repeat 1px 3px $white;
+	// }
 }
 
 // FIXME: CLEAN UP ALL OTHER FOCUS-ES
@@ -486,7 +487,7 @@ select {
 	padding: 5rem 15rem 5rem 5rem;
 	font: inherit;
 	color: inherit;
-	background: url('/svg/select-handle-off.svg') no-repeat right -10rem center white;
+	// background: url('/svg/select-handle-off.svg') no-repeat right -10rem center white;
 	background-origin: content-box;
 	background-size: 8px 11px;
 	border: 1px solid $gray-5;
