--- a/src/client/postcss/_basics.postcss
+++ b/src/client/postcss/_basics.postcss
@@ -174,19 +174,19 @@ table {
 	background-color: $white;
 	border-collapse: collapse;
 	border-spacing: 0;
-	border: 1px solid $gray-6;
+	border: 1px solid $gray-main;
 	font: 13rem/1 $font;
 }
 thead,
 tfoot {
 	tr {
-		border: 1px solid $gray-6;
+		border: 1px solid $gray-main;
 	}
 }
 tbody {
 	tr {
 		&:nth-child(odd) {
-			background-color: $gray-7;
+			background-color: $gray-main;
 		}
 	}
 }
@@ -241,7 +241,7 @@ pre {
 	max-height: 400px;
 	font: 13rem $mono-font;
 	background-color: $gray-light;
-	border: 1px solid $gray-6;
+	border: 1px solid $gray-main;
 }
 
 code {
@@ -327,14 +327,14 @@ textarea {
 	&::-moz-placeholder,
 	&:-ms-input-placeholder,
 	&::placeholder {
-		color: $gray-2;
+		color: $gray-main;
 	}
 	&[readonly] {
-		background-color: $gray-5;
+		background-color: $gray-main;
 		box-shadow: none;
 	}
 	&:disabled {
-		background-color: $gray-5;
+		background-color: $gray-main;
 		box-shadow: none;
 	}
 }
@@ -361,9 +361,9 @@ textarea {
 	height: 30rem;
 	margin: 0 0 10rem;
 	padding: 5rem;
-	border: 1px solid $gray-5;
+	border: 1px solid $gray-main;
 	border-radius: 2px;
-	background-color: white;
+	background-color: $white;
 	box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
 	font-family: inherit;
 	font-size: 13rem;
@@ -376,9 +376,9 @@ textarea {
 	appearance: none;
 	&:focus {
 		outline: none;
-		border: 1px solid $access-blue-alt;
-		background-color: $form-white;
-		box-shadow: 0 0 0 3px $access-blue;
+		border: 1px solid $access-2;
+		background-color: $white;
+		box-shadow: 0 0 0 3px $access-1;
 		transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
 	}
 }
@@ -420,7 +420,7 @@ input[type='search'] {
 	height: 18rem;
 	width: 18rem;
 	background: $white;
-	border: 1rem solid $gray-4;
+	border: 1rem solid $gray-main;
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 	transition: 0.15s border-color ease-in-out;
 	cursor: pointer;
@@ -487,10 +487,10 @@ select {
 	padding: 5rem 15rem 5rem 5rem;
 	font: inherit;
 	color: inherit;
-	// background: url('/svg/select-handle-off.svg') no-repeat right -10rem center white;
+	// background: url('/svg/select-handle-off.svg') no-repeat right -10rem center $white;
 	background-origin: content-box;
 	background-size: 8px 11px;
-	border: 1px solid $gray-5;
+	border: 1px solid $gray-main;
 	border-radius: 2px;
 	text-transform: none;
 	transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
@@ -501,9 +501,9 @@ select {
 	-moz-appearance: none;
 	&:focus {
 		outline: none;
-		border: 1px solid $access-blue-alt;
-		background-color: $form-white;
-		box-shadow: 0 0 0 3px $access-blue;
+		border: 1px solid $access-2;
+		background-color: $white;
+		box-shadow: 0 0 0 3px $access-1;
 	}
 	&:disabled {
 		background-color: #e6e6e6;
@@ -575,7 +575,7 @@ blockquote {
 		width: 50%;
 		height: 4rem;
 		margin: 20rem auto 50rem;
-		background-color: $red-main;
+		background-color: $gray-main;
 	}
 }
 
