--- a/static/css/global.css
+++ b/static/css/global.css
@@ -151,16 +151,16 @@ table {
 	background-color: #ffffff;
 	border-collapse: collapse;
 	border-spacing: 0;
-	border: 1px solid #e1e5e6;
+	border: 1px solid #cbd0d1;
 	font: 13rem/1 'Muli', sans-serif;
 }
 
 thead tr, tfoot tr {
-		border: 1px solid #e1e5e6;
+		border: 1px solid #cbd0d1;
 	}
 
 tbody tr:nth-child(odd) {
-			background-color: #f0f4f5;
+			background-color: #cbd0d1;
 		}
 
 th, td {
@@ -215,7 +215,7 @@ pre {
 	max-height: 400px;
 	font: 13rem Consolas, "Liberation Mono", Courier, monospace;
 	background-color: #f5f5f5;
-	border: 1px solid #e1e5e6;
+	border: 1px solid #cbd0d1;
 }
 
 code {
@@ -296,7 +296,7 @@ textarea[rows] {
 	}
 
 input::-webkit-input-placeholder, input::-moz-placeholder, input:-ms-input-placeholder, input::placeholder, textarea::-webkit-input-placeholder, textarea::-moz-placeholder, textarea:-ms-input-placeholder, textarea::placeholder {
-		color: #6b787b;
+		color: #cbd0d1;
 	}
 
 input[readonly], textarea[readonly] {
@@ -318,7 +318,7 @@ input:disabled, textarea:disabled {
 	padding: 5rem;
 	border: 1px solid #cbd0d1;
 	border-radius: 2px;
-	background-color: white;
+	background-color: #ffffff;
 	box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.1);
 	font-family: inherit;
 	font-size: 13rem;
@@ -334,7 +334,7 @@ input:disabled, textarea:disabled {
 .input-like:focus, [type='text']:focus, [type='password']:focus, [type='date']:focus, [type='datetime']:focus, [type='datetime-local']:focus, [type='month']:focus, [type='week']:focus, [type='email']:focus, [type='number']:focus, [type='search']:focus, [type='tel']:focus, [type='time']:focus, [type='url']:focus, [type='color']:focus, textarea:focus {
 		outline: none;
 		border: 1px solid #9cccdf;
-		background-color: #fefefe;
+		background-color: #ffffff;
 		box-shadow: 0 0 0 3px #c4efff;
 		transition: box-shadow 0.5s, border-color 0.25s ease-in-out;
 	}
@@ -370,7 +370,7 @@ input[type='search'] {
 	height: 18rem;
 	width: 18rem;
 	background: #ffffff;
-	border: 1rem solid #aeb6b8;
+	border: 1rem solid #cbd0d1;
 	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 	transition: 0.15s border-color ease-in-out;
 	cursor: pointer;
@@ -430,7 +430,7 @@ select {
 select:focus {
 		outline: none;
 		border: 1px solid #9cccdf;
-		background-color: #fefefe;
+		background-color: #ffffff;
 		box-shadow: 0 0 0 3px #c4efff;
 	}
 
@@ -498,7 +498,7 @@ blockquote::after {
 		width: 50%;
 		height: 4rem;
 		margin: 20rem auto 50rem;
-		background-color: #cc5654;
+		background-color: #cbd0d1;
 	}
 
 /* Text-level semantics (https://html.spec.whatwg.org/multipage/semantics.html#text-level-semantics)
@@ -686,7 +686,7 @@ a, area, button, label, summary, [tabindex] {
 
 .button:hover, .button:focus {
 		background-color: #323335;
-		color: white;
+		color: #ffffff;
 	}
 
 .button.tiny {
@@ -741,16 +741,6 @@ a, area, button, label, summary, [tabindex] {
 			color: #fefefe;
 		}
 
-.button.dull {
-		background-color: #e1e5e6;
-		color: #323335;
-	}
-
-.button.dull:hover, .button.dull:focus {
-			background-color: #cbd0d1;
-			color: #323335;
-		}
-
 .button.link {
 		padding: 0;
 		border: 0;
@@ -785,13 +775,15 @@ a, area, button, label, summary, [tabindex] {
 		}
 
 .button[disabled] {
+		background-color: #cbd0d1;
+		color: #ffffff;
 		cursor: default;
 		pointer-events: none;
 	}
 
 .button[disabled]:hover, .button[disabled]:focus {
-			background-color: transparent;
-			color: #323335;
+			background-color: #cbd0d1;
+			color: #ffffff;
 		}
 
 /** >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
@@ -823,7 +815,7 @@ a, area, button, label, summary, [tabindex] {
 
 html {
 	height: 100%;
-	background-color: #e4e3df;
+	background-color: #eee;
 	font: 1px/1.2 'Muli', sans-serif;
 	box-sizing: border-box;
 	text-size-adjust: 100%;
@@ -839,7 +831,7 @@ body {
 	display: flex;
 	min-height: 100%;
 	margin: 0;
-	background-color: #e4e3df;
+	background-color: #eee;
 	color: #000000;
 	font: 15rem/1.15 'Muli', sans-serif;
 	letter-spacing: 0.02em;
@@ -857,6 +849,10 @@ body {
 .layout-outer { padding: 0 20rem
 } }
 
+.layout-inner {
+	background-color: #ffffff;
+}
+
 .layout-main {
 	padding: 100rem 0;
 }
@@ -865,28 +861,6 @@ body {
 
 .layout-main { padding: 40rem 0
 } }
-
-.chapters {
-	margin: 0 -30rem;
-}
-
-@media (max-width: 767px) {
-
-.chapters { margin: 0 -20rem
-} }
-
-.chapter {
-	position: relative;
-	z-index: 1;
-}
-
-.chapter-content {
-	position: relative;
-	margin: 0 auto;
-	width: 100%;
-	max-width: 1200rem;
-	z-index: 2;
-}
 
 .full-width {
 	margin: 0 calc(50% - 50vw);
